--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://<username>.github.io/photo-port",
+  "homepage": "https://wilhite27.github.io/React-Challenge-React-Portfolio/",
   "name": "myportfoliosite",
   "version": "0.1.0",
   "private": true,
