--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wilhite27.github.io/",
+  "homepage": "https://wilhite27.github.io",
   "name": "myportfoliosite",
   "version": "0.1.0",
   "private": true,
